steve/userprofile-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: userprofile
spec:
  host: userprofile
  subsets:
  - labels:
      version: "1.0"
    name: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - labels:
      version: "2.0"
    name: v2
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
  - labels:
      version: "3.0"
    name: v3
